refactor: Extract agent API into a new module and restructure starter and server components.